--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    html,body,#main{
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+    }
+</style>
 
 <body>
-    <div id="app"></div>
+    <div id="main"></div>
 </body>
 
 </html>
